# confgen

./: .confgen.schema.json  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: console_utils.rs  main.rs  parsing_utils.rs
