[package]
name = "confgen"
version = "1.0.0"
description = "Generate configuration files from pre-defined templates"
authors = ["Tyman"]
readme = "README.md"
repository = "https://github.com/TymanWasTaken/confgen"
license = "OSL-3.0"
edition = "2021"
[dependencies]
ansi_term = "0.12.1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
lazy_static = "1.4.0"
